tests/abcdef/modularity/fixtures/syntax_error/broken_module/__init__.py
__modularity__ = {"type": "command"}

# Syntax error: incomplete function definition
def broken_func(
